* Better exception if a World proc returns nil. (Aslak Hellesøy)
* Allow Step Definitions to use |*varargs|, but only on Ruby 1.9. (Aslak Hellesøy)
* Snippets for steps that use Step Tables or PyStrings include block param and object type hint comment (#247 Joseph Wilk)
* Support description string for Backgrounds (#271 Joseph Wilk)

=== Bugfixes
* Fixed Autospec failing with cucumber 0.2 (#254 Aslak Hellesøy)
* Sibling file detecting not working (#278 Aslak Hellesøy)

=== Removed/changed features
* The visitor API has changed slightly:
** #visit_step_name, #visit_multiline_arg and #visit_exception are no longer official API methods.
** #visit_step_result replaces those 3 methods.
** Table and PyString no longer hold status information. Each visitor subclass should store state in @state if needed.
** #visit_py_string no longer takes a status argument.

== 0.2.3 2009-03-30

This release sports 4 updated languages, slightly better help with snippets if you "quote" arguments
in your steps. Windows/JRuby users can enjoy colours and you get some more sugar with Tables.

=== New features
* Added new Then /^I should be on (.+)$/ do |page_name| step (Grant Hollingworth)
* Use skipped_param color for examples table header (#266 Eugene Naydanov)
* Added new Cucumber::Ast::Table#rows_hash method (Torbjørn Vatn)
* Windows/JRuby users can now enjoy colourful output (via http://github.com/aslakhellesoy/ansicolor) (#166 Aslak Hellesøy)
* Ambiguous step errors hint about --guess (unless --guess already on) (Aslak Hellesøy)
* Added translation for Slovak (Ahmed Al Hafoudh) 
* Updated translation for Dutch (Bart Zonneveld)
* Updated translation for Italian (Alessandro Baroni)
* Updated translation for Japanese (KAKUTANI Shintaro)

=== Bugfixes
* Fixed step name after step keyword without space (#265 Aslak Hellesøy)
* Backtrace is back in HTML reports (Aslak Hellesøy)

== 0.2.2 2009-03-25

This release includes some minor changes to make Cucumber work with pure Java. Cucumber